# soon-integration-test

./: .env.example  .envrc  .envrc.example  .gitignore  .gitmodules  .prettierignore  Anchor.toml  Makefile  README.md  docker-compose.yaml  l1-setup.sh  l1_deploy_config.json  package.json  set-env.sh  vitest.config.mts
.soon/keypair/: faucet.json  identity.json  network_identity.json  upgrader.json
contracts/: foundry.toml
contracts/src/: TestErc20.sol
docker/anvil/: Dockerfile
docker/nginx/conf.d/: default.conf
docker/nginx/html/: .deploy  50x.html
programs/account_data_anchor_program_example/: Cargo.toml
programs/account_data_anchor_program_example/src/: lib.rs
programs/builtin_and_spl_cpi/: Cargo.toml
programs/builtin_and_spl_cpi/src/: errors.rs  lib.rs
programs/builtin_and_spl_cpi/src/instructions/: mod.rs  spl_compression.rs  spl_memo.rs  spl_name_service.rs  spl_noop.rs  spl_token.rs  spl_token_2022.rs  wrap_sol.rs
scripts/: build-soon.sh  install.sh  l1-setup.sh  soon-setup.sh  ubuntu-test.sh
tests/: setup.ts  test-deposit-withdraw-eth.ts  test-deposit.ts  test-erc-20-deposit.ts  test-erc-20.ts  test-programs.ts  test-withdraw.ts
tests/app/: index.ts
tests/app/example/: spl.ts
tests/app/instructions/: builtin.ts  spl.ts
tests/helper/: spam-utils.ts
typechain/: TestERC20.ts  index.ts
typechain/factories/: TestERC20__factory.ts
