[package]
name = "builtin_and_spl_cpi"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "builtin_and_spl_cpi"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = [
    "anchor-lang/idl-build",
    "anchor-spl/idl-build",
]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
#spl-account-compression = "0.4.2"
#spl-noop = "0.2.0"
spl-name-service = { version = "0.3.1", features = ["no-entrypoint"]  }
bytemuck_derive = "=1.8.0"